Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     line-height: 1.2;
     background-color: #f9f8f7;
     max-width: 500px;
-
+    overflow-y: scroll;
 }
 
 header nav {
